# target-s3

./: meltano.yml  pyproject.toml
target_s3/: target.py
target_s3/formats/: format_base.py  format_jsonl.py
