[tool.poetry]
name = "target-s3"
version = "1.0.7"
description = "`target-s3` is a Singer target for s3, built with the Meltano Singer SDK."
authors = ["crowemi"]
keywords = [
    "ELT",
    "s3",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "==2.32.3"
singer-sdk = "==0.33.1"
smart-open = {extras = ["s3"], version = "==6.4.0"}
pyarrow = "==10.0.1"
pandas = "==1.5.3"
numpy = "==1.26.4"
fsspec = "==2022.11.0"
s3fs = "==2022.11.0"
pymongo = "==4.11.3"
boto3 = "==1.24.59"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^6.2.5"
tox = "^3.24.4"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_s3"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-s3 = 'target_s3.target:Targets3.cli'
